# unreal-mcp

./: .gitignore  AGENTS.md  AI_RPG_Agent_Simulation_MASTER_PLAN.md  README.md  camera_orbit_session_2026-04-30.md  restart_unreal_mcp_server.bat  still_todo.md
.agents/skills/create-npc/: SKILL.md
Docs/: character_system.md
MCPGameProject/: Build.bat  GenerateProjectFiles.bat
MCPGameProject/Config/: DefaultEngine.ini
MCPGameProject/Plugins/UnrealMCP/Source/UnrealMCP/: UnrealMCP.Build.cs
Python/: npc_cli.py  pyproject.toml  restart_unreal_mcp_stdio.ps1  start_npc_builder.bat  unreal_mcp_server.py
Python/agent_runtime/: __init__.py  action_validator.py  agent.py  agent_manager.py  llm_router.py  memory_store.py  unreal_bridge.py
Python/agents/bartleby/: character.md  goals.md  memory.json  rules.md  state.json  tools.json
Python/agents/dufus/: character.md  goals.md  rules.md  state.json
Python/agents/gondolf/: character.md  goals.md  memory.json  rules.md  state.json
Python/tools/: attachment_tools.py  camera_tools.py  character_tools.py  editor_tools.py  simulation_tools.py
Python/web_ui/: main.py  unreal_client.py
Python/web_ui/templates/: agent.html  base.html  index.html
Python/worlds/MCP_World/agents/dufus/: memory.json  state.json  tools.json
npc_builder/: start.bat
npc_builder/backend/: file_manager.py  main.py  models.py  requirements.txt
npc_builder/frontend/: index.html  package-lock.json  package.json
npc_builder/frontend/src/: App.tsx  api.ts  index.css
npc_builder/frontend/src/components/: AgentEditor.tsx  AgentList.tsx
(+24 files in other folders)
